--- a/App/app/src/main/res/layout-land/activity_enter_trainees_details.xml
+++ b/App/app/src/main/res/layout-land/activity_enter_trainees_details.xml
@@ -22,8 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView3"
-        android:layout_below="@+id/btnEnter_trainees_details"
-        android:layout_above="@+id/btnLogout" >
+        android:layout_above="@+id/btnLogout"
+        android:layout_below="@+id/btnEnter_trainees_details" >
 
         <LinearLayout
             android:orientation="vertical"
@@ -54,7 +54,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="15dp"
-                        android:onClick="EnterGeneralDetails"
+                        android:onClick="enter_general_details"
                         android:layout_below="@+id/btnEnter_edit_trainees_details"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -72,7 +72,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="15dp"
-                        android:onClick="EnterTrainingDetails"
+                        android:onClick="enter_training_details"
                         android:layout_centerVertical="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -95,7 +95,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="15dp"
-                        android:onClick="EnterAssessmentInfo1"
+                        android:onClick="enter_assessment_info_1"
                         android:layout_centerVertical="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -113,7 +113,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="15dp"
-                        android:onClick="EnterAssessmentInfo2"
+                        android:onClick="enter_assessment_info_2"
                         android:layout_centerVertical="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -136,7 +136,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="15dp"
-                        android:onClick="EnterOfficialDetails"
+                        android:onClick="enter_official_details"
                         android:layout_centerVertical="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -154,7 +154,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="15dp"
-                        android:onClick="EnterAdditionalInformation"
+                        android:onClick="enter_additional_info"
                         android:layout_below="@+id/btnEnter_edit_trainees_details"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -177,7 +177,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="15dp"
-                        android:onClick="EnterTestimony"
+                        android:onClick="enter_testimony"
                         android:layout_centerVertical="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -195,7 +195,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="15dp"
-                        android:onClick="EnterFamilyDetails"
+                        android:onClick="enter_family_details"
                         android:layout_below="@+id/btnEnter_edit_trainees_details"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
